2017-09-25  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_arts_sensor_parts.m: Now handles
	Q.SIDEBAND_LEAKAGE = 'model'. Removed gfromat option for
	Q.SIDEBAND_LEAKAGE.

	* Mscripts_misc/sband_from_l1b.m: The function assumed l1b to be
	v5. Added small fix to also allow v4 format.

	* Mscripts_webapi/get_scan_aux_data.m: Added fix to handle v5
	data. The Data level is simply removed, and v5 comes out of the
	function in same format as v4.

2017-09-22  Andreas Skyman  <andreas.skyman@molflow.com>

	* Mscripts_misc/sband_from_l1b.m: Added optional argument freq_grid to
	function, which makes it use the supplied freq_grid instead of the ones in
	the L1b struct, as well as use median Tcal, LOFreq and SBPath.  Updated
	comments and names in function to reflect that the function returns
	leakage, not response.

2017-09-07  Joakim Möller  <joakim.moller@molflow.com>

	* Mscripts_webapi/webread_retry: Update to actually retry the GET request
	as many times the input parameter says. Better error reporting.

	* Mscripts_webapi/webwrite_retry: Update to actually retry the POST request
	as many times the input parameter says. Better error reporting.

	* Build_scripts/runscript.m: Quit and report if input-URL gives empty
	result.

2017-09-04  Joakim Möller  <joakim.moller@molflow.com>

	* Build_scripts/batch_build_single.sh: Updated script to push to the
	backend registry instead of the cached frontend registry.

	* Build_scripts/docker/complete/build_complete.sh: Updated script to push
	to the backend registry instead of the cached frontend registry.

	* ChangeLog: Adjusting Andreas last ChangLog dates after consulting him.

2017-09-01  Andreas Skyman  <andreas.skyman@molflow.com>

	* Mscripts_misc/sband_from_l1b.m: implemented thermal expansion of l0_LO
	in addition to l0_SB

2017-08-31  Andreas Skyman  <andreas.skyman@molflow.com>

	* Mscripts_misc/: created directory (this name is probably temporary)